--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -14,6 +15,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ProyectoGhibli"
         tools:targetApi="31">
+
+        <activity
+            android:name=".ListadoYpeliculas.PeliculaActivity"
+            android:exported="false" />
         <activity
             android:name=".InfoFragment.TercerFragmento"
             android:exported="false" />
@@ -31,12 +36,9 @@
             android:exported="false" />
         <activity
             android:name=".ListadoYpeliculas.ListadoPeliculasActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".InicioActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ListadoYpeliculas.PeliculaActivity"
             android:exported="false" />
         <activity
             android:name=".loginUserActivity"
@@ -47,9 +49,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".MainActivity"
-            android:exported="false" />
+
     </application>
 
 </manifest>
